--- a/template/index.html
+++ b/template/index.html
@@ -20,7 +20,7 @@
 
 		<div id="menu">
 			<u1>
-				<li ><a href="http://127.0.0.1:8000/site/">Home</a></li>
+				<li ><a href="{% url index %}">Home</a></li>
 				<li><a>Recipes</a></li>
 				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/AboutUs.php">About Us</a></li>
 				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/ContactUs.php">Contact Us</a></li>
