Contact us stuff

--- a/template/site/ContactUs.html
+++ b/template/site/ContactUs.html
@@ -19,10 +19,10 @@
 
 		<div id="menu">
 			<u1>
-				<li class="current_page_item"><a href="http://web.engr.illinois.edu/~justinthyme/testsite/JustInThymeSite.php">Home</a></li>
+				<li ><a href="{% url "index" %}">Home</a></li>
 				<li><a>Recipes</a></li>
 				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/AboutUs.php">About Us</a></li>
-				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/ContactUs.php">Contact Us</a></li>
+				<li><a href="{% url "contact" %}">Contact Us</a></li>
 			</u1>
 		</div>
 	</div>
