--- a/template/index.html
+++ b/template/index.html
@@ -23,7 +23,7 @@
 				<li ><a href="{% url "index" %}">Home</a></li>
 				<li><a>Recipes</a></li>
 				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/AboutUs.php">About Us</a></li>
-				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/ContactUs.php">Contact Us</a></li>
+				<li><a href="{% url "contact" %}">Contact Us</a></li>
 			</u1>
 		</div>
 	</div>
