Adding About Us page

--- a/template/index.html
+++ b/template/index.html
@@ -22,7 +22,7 @@
 			<u1>
 				<li ><a href="{% url "index" %}">Home</a></li>
 				<li><a>Recipes</a></li>
-				<li><a href="http://web.engr.illinois.edu/~justinthyme/testsite/AboutUs.php">About Us</a></li>
+				<li><a href="{% url "about" %}">About Us</a></li>
 				<li><a href="{% url "contact" %}">Contact Us</a></li>
 			</u1>
 		</div>
