--- a/template/index.html
+++ b/template/index.html
@@ -31,8 +31,8 @@
 	<div id="wrapper">
 		<div id="page">
 			<div id="box1">
-				<p>This is a test<br><br><br>
-				I put stuff here.</p>
+				<p>Welcome to Just In Thyme!<br><br> 
+				</p>
 			</div>
 		</div>
 	</div>
