single ingredient search

--- a/static/css/test.css
+++ b/static/css/test.css
@@ -5,6 +5,14 @@
     margin:10px 0px;
     overflow:scroll;
 }
+#results_ingredients{
+    background-color:#BB4;
+    height:200px;
+    width:600px;
+    margin:10px 0px;
+    overflow:scroll;
+}
+
 img{
     height:30px;
     width:30px;
