--- a/template/test.html
+++ b/template/test.html
@@ -9,6 +9,13 @@
 </form>
 <div id="results"></div>
 
+<form id="ingredient_search">
+    Enter ingredients: <input type="text" name="ingredients"/>
+</form>
+<div id="results_ingredients"></div>
+
+
+
 <form id="insert">
     Recipe Insertion:<br>
     Name: <input id="name" type="text" name="name"/><br> 
