prettier search page

--- a/static/css/test.css
+++ b/static/css/test.css
@@ -1,13 +1,13 @@
 #results{
-    background-color:#BB4;
-    height:200px;
+    background-color:#FFCC66;
+    height:400px;
     width:600px;
     margin:10px 0px;
     overflow:scroll;
 }
 #results_ingredients{
-    background-color:#BB4;
-    height:200px;
+    background-color:#FFCC66;
+    height:400px;
     width:600px;
     margin:10px 0px;
     overflow:scroll;
