--- a/template/site/AboutUs.html
+++ b/template/site/AboutUs.html
@@ -1,10 +1,11 @@
 {% load staticfiles %}
+
 <head>
 	<script type="text/javascript" src="{% static "js/jquery.js" %}"></script>
 	<meta http-equiv="Content-Type" content="text/html"; charset="windows-1252" />
 	<link rel = "stylesheet" type="text/css" href="{% static "css/style.css" %}" />
-	<title>Just In Thyme About Us</title>
-	<script type="text/javascript" src=jquery-1.7.1.min.js></script>
+	<title>Just In Thyme</title>
+	<!--<script type="text/javascript" src=jquery-1.7.1.min.js></script>-->
 </head>
 
 <body>
