Fixed spelling errors

--- a/template/test.html
+++ b/template/test.html
@@ -46,7 +46,7 @@
 <div id="results"></div>
 
 <form id="ingredient_search">
-    Prefered ingredients? <input type="text" name="ingredients"/>
+    Preferred ingredients? <input type="text" name="ingredients"/>
 </form>
 <div id="results_ingredients"></div>
 
